[package]
name = "malen"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
wasm-bindgen = "0.2"
nalgebra = { version = "0.25.4", features = ["convert-bytemuck"] }
fontdue = "0.5"
bytemuck = "1.7"
bytemuck_derive = "1.0"
crevice = { version = "0.8", features = ["nalgebra"] }
glow = "0.11"

golem = { git = "https://github.com/ryanisaacg/golem.git", features = ["web-sys"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "WebGlRenderingContext",
    "HtmlCanvasElement",
    "Window",
    "KeyboardEvent",
    "Event",
    "FocusEvent",
    "CssStyleDeclaration",
]

[workspace]
members = [
    "examples/playground",
]
