[package]
name = "malen"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
wasm-bindgen = "0.2"
nalgebra = { version = "0.25.4", features = ["convert-bytemuck"] }
fontdue = "0.5"
bytemuck = "1.7"
bytemuck_derive = "1.0"
glow = "0.11"

# Downgrade nalgebra for VS Code
#crevice = { version = "0.8", features = ["nalgebra"] }
crevice = { git = "https://github.com/leod/crevice.git", branch = "nalgebra-0.25.4", features = ["nalgebra"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "WebGl2RenderingContext",
    "HtmlCanvasElement",
    "Window",
    "KeyboardEvent",
    "Event",
    "FocusEvent",
    "CssStyleDeclaration",
    "Element",
    "DomRect",
    "MouseEvent",
]

[workspace]
members = [
    "examples/playground",
]
