[package]
name = "malen"
version = "0.4.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
nalgebra = { version = "0.25.4", features = ["convert-bytemuck"] }
fontdue = "0.6"
bytemuck = "1.7"
bytemuck_derive = "1.0"
glow = "0.11"
instant = { version = "0.1", features = ["wasm-bindgen"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
slab = "0.4"

# Downgrade nalgebra for VS Code
#crevice = { version = "0.8", features = ["nalgebra"] }
crevice = { git = "https://github.com/leod/crevice.git", branch = "nalgebra-0.25.4", features = ["nalgebra"] }

coarse-prof = { git = "https://github.com/leod/coarse-prof", branch = "string_names", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "WebGl2RenderingContext",
    "WebGlContextAttributes",
    "WebGlPowerPreference",
    "HtmlCanvasElement",
    "Window",
    "KeyboardEvent",
    "Event",
    "FocusEvent",
    "CssStyleDeclaration",
    "Element",
    "DomRect",
    "MouseEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Blob",
    "ImageBitmapFormat",
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "AudioNode",
    "AudioDestinationNode",
    "AudioListener",
    "PannerNode",
    "GainNode",
    "AudioParam",
    "PanningModelType",
    "DistanceModelType",
    "DynamicsCompressorNode",
]

[workspace]
members = [
    "examples/playground",
]
