[package]
name = "playground"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
malen = { path = "../../" }
wasm-bindgen = "0.2"
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
nalgebra = "0.23"

rand = "0.7"
rand_distr = "0.3"

# This is necessary so that thread_rng() does not panic on wasm targets
getrandom = { version = "0.1", features = ["wasm-bindgen"] }