[package]
name = "playground"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
malen = { path = "../../" }
wasm-bindgen = "0.2"
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
nalgebra = "0.23"
rand = { version = "0.7", features = ["wasm-bindgen"] }
coarse-prof = { git = "https://github.com/leod/coarse-prof" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
